--- a/config
+++ b/config
@@ -1,3 +1,4 @@
-FQDN="zarcars.co.uk"
+FQDN="cloud-start.co.uk"
+PORT=8881                    # SSL port 443
 EMAIL="malin_id@yahoo.com"
 TEST_CERT="--test-cert"
